# Learning-CUDA

08_bilateral_filter/MLRichard/: CMakeLists.txt  CMakePresets.json  README.md  params.txt  task.md
08_bilateral_filter/MLRichard/docs/: report.md
08_bilateral_filter/MLRichard/docs/plans/: 2026-03-06-bilateral-filter-design.md  2026-03-06-bilateral-filter-impl.md  2026-03-07-readme-cmake-presets-design.md  2026-03-07-readme-cmake-presets.md
08_bilateral_filter/MLRichard/src/: bilateral_filter.cu  bilateral_filter.cuh  io.cpp  io.h  main.cu  metrics.cpp  metrics.h  reference.cpp  reference.h
08_bilateral_filter/MLRichard/test/: test_correctness.cpp  test_performance.cpp
08_bilateral_filter/MLRichard/tools/: generate_test_raw.py  img2raw.py  profile_task12.sh
